[tool.poetry]
name = "wedding-rsvp"
version = "0.1.0"
description = "Manage invitations for a wedding"
authors = ["Josh Freedman <josh@freedman.dev>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
