[tool.poetry]
name = "wedding-rsvp"
version = "0.1.0"
description = "Manage invitations for a wedding"
authors = ["Josh Freedman <josh@freedman.dev>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.4"
shortuuid = "^1.0.13"
django-filer = "^3.3.1"


[tool.poetry.group.dev.dependencies]
setuptools = "^75.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
